--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  display: flex;
-  max-height: fit-content;
-  flex-direction: column;
-  min-width: 700px;
 }
 
-main {
-  flex: 1 0 auto;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
 .pin {
@@ -26,15 +23,26 @@ main {
   top: 50%;
   margin: -20px 0 0 -20px;
 }
+
 .pin:after {
   content: "";
   width: 14px;
   height: 14px;
-  margin: 8px 0 0 8px;
+  margin: 7px 0 0 -6px;
   background: #e6e6e6;
   position: absolute;
   border-radius: 50%;
 }
+
+/* .pin:after {
+  content: "";
+  width: 14px;
+  height: 14px;
+  margin: 7px 0 0 -6px;
+  background: #e6e6e6;
+  position: absolute;
+  border-radius: 50%;
+} */
 
 .bounce {
   animation-name: bounce;
@@ -60,7 +68,7 @@ main {
   height: 40px;
   width: 40px;
   position: absolute;
-  margin: -13px 0 0 -13px;
+  margin: -13px 0 0 -20px;
   animation: pulsate 1s ease-out;
   animation-iteration-count: infinite;
   opacity: 0;
@@ -112,62 +120,4 @@ main {
 #map {
   height: 600px;  /* The height is 400 pixels */
   width: 100%;  /* The width is the width of the web page */
-}
-
-.otp {
-  max-width: 10;
-}
-
-.image {
-  max-width: 200px;
-}
-
-#parent{ 
-  display: grid;
-  flex-direction: column; 
-  grid-template-columns: 35% 65%; 
-} 
-.imgcol{ 
-  height: auto; 
-  padding: 10px; 
-  width: 50px;
-  flex: 5%; 
-} 
-.imgcol:nth-child(2){ 
-  width: 700px;
-} 
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-#create-post {
-  z-index: 1001;
-  position: fixed;
-  width: 100%;
-  min-height: calc(100vh - 56px);
-  overflow-y: scroll;
-  bottom: 0;
-  top: 56px;
-  background: white;
-  text-align: center;
-  /*display: none;*/
-  transform: translateY(100vh);
-  transition: transform 0.3s;
-}
-
-#create-post video, #create-post canvas {
-  width: 512px;
-  max-width: 100%;
-  display: none;
-  margin: auto;
-}
-
-#create-post #pick-image {
-  display: none;
-}
-
-#create-post #capture-btn {
-  margin: 10px auto;
 }
